--- a/source/todo/public/css/application.css
+++ b/source/todo/public/css/application.css
@@ -47,5 +47,13 @@ a:hover {
   text-align: center;
   padding: 10px;
   border: 1px dotted black;
-
 }
+
+.welcome-container   {
+  text-align: center;
+  margin: 20px auto;
+  width: 400px;
+  text-align: center;
+  border: 1px dotted black;
+}
+
